.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:36:37 **** Rebuild of configuration Debug for project tarefa numeros ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\tarefa3.o" "..\\src\\tarefa3.cpp" 
..\src\tarefa3.cpp: In function 'int main()':
..\src\tarefa3.cpp:30:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
g++ -o "tarefa numeros.exe" "src\\tarefa3.o" 
Info: Nothing to build for tarefa numeros
10:40:52 **** Incremental Build of configuration Debug for project tarefa numeros ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\tarefa3.o" "..\\src\\tarefa3.cpp" 
..\src\tarefa3.cpp: In function 'int main()':
..\src\tarefa3.cpp:26:17: error: 'n' was not declared in this scope
     std::cin >> n;
                 ^
..\src\tarefa3.cpp:35:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
..\src\tarefa3.cpp:43:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
10:40:53 **** Incremental Build of configuration Debug for project tarefa numeros ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\tarefa3.o" "..\\src\\tarefa3.cpp" 
..\src\tarefa3.cpp: In function 'int main()':
..\src\tarefa3.cpp:26:17: error: 'n' was not declared in this scope
     std::cin >> n;
                 ^
..\src\tarefa3.cpp:35:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
..\src\tarefa3.cpp:43:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
10:41:23 **** Incremental Build of configuration Debug for project tarefa numeros ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\tarefa3.o" "..\\src\\tarefa3.cpp" 
..\src\tarefa3.cpp: In function 'int main()':
..\src\tarefa3.cpp:36:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
..\src\tarefa3.cpp:44:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
g++ -o "tarefa numeros.exe" "src\\tarefa3.o" 
Info: Nothing to build for tarefa numeros
10:43:35 **** Incremental Build of configuration Debug for project tarefa numeros ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\tarefa3.o" "..\\src\\tarefa3.cpp" 
..\src\tarefa3.cpp: In function 'int main()':
..\src\tarefa3.cpp:36:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
..\src\tarefa3.cpp:44:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
g++ -o "tarefa numeros.exe" "src\\tarefa3.o" 
Info: Nothing to build for tarefa numeros
Info: Nothing to build for tarefa numeros
10:45:14 **** Incremental Build of configuration Debug for project tarefa numeros ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\tarefa3.o" "..\\src\\tarefa3.cpp" 
..\src\tarefa3.cpp: In function 'int main()':
..\src\tarefa3.cpp:36:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
..\src\tarefa3.cpp:45:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
g++ -o "tarefa numeros.exe" "src\\tarefa3.o" 
Info: Nothing to build for tarefa numeros
01:17:15 **** Rebuild of configuration Debug for project tarefa 1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\tarefa1.o" "..\\src\\tarefa1.cpp" 
g++ -o "tarefa 1.exe" "src\\tarefa1.o" 
01:17:15 **** Rebuild of configuration Debug for project tarefa numeros ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\tarefa3.o" "..\\src\\tarefa3.cpp" 
..\src\tarefa3.cpp: In function 'int main()':
..\src\tarefa3.cpp:36:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
..\src\tarefa3.cpp:45:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < my_vector.size(); i++) {
                     ~~^~~~~~~~~~~~~~~~~~
g++ -o "tarefa numeros.exe" "src\\tarefa3.o" 
01:23:25 **** Rebuild of configuration Debug for project econ ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "eclipse_econ\\src\\buildings.o" "..\\eclipse_econ\\src\\buildings.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "econ\\src\\manager.o" "..\\econ\\src\\manager.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "eclipse_econ\\src\\main.o" "..\\eclipse_econ\\src\\main.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "econ\\src\\main.o" "..\\econ\\src\\main.cpp" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ".metadata\\.plugins\\org.eclipse.cdt.managedbuilder.core\\spec.o" "..\\.metadata\\.plugins\\org.eclipse.cdt.managedbuilder.core\\spec.c" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "qt\\teste1\\main.o" "..\\qt\\teste1\\main.cpp" 
..\qt\teste1\main.cpp:1:24: fatal error: QApplication: No such file or directory
 #include <QApplication>
                        ^
compilation terminated.
15:13:12 **** Build of configuration Debug for project 4_displaymux ****
make all 
Building file: ../funsape/util/debug.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega16 -DF_CPU=1000000UL -MMD -MP -MF"funsape/util/debug.d" -MT"funsape/util/debug.o" -c -o "funsape/util/debug.o" "../funsape/util/debug.cpp"
make: *** [funsape/util/debug.o] Error -1073741502
"make all" terminated with exit code 2. Build might be incomplete.
15:13:23 **** Incremental Build of configuration Debug for project 4_displaymux ****
make all 
Building file: ../funsape/util/debug.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega16 -DF_CPU=1000000UL -MMD -MP -MF"funsape/util/debug.d" -MT"funsape/util/debug.o" -c -o "funsape/util/debug.o" "../funsape/util/debug.cpp"
make: *** [funsape/util/debug.o] Error -1073741502
"make all" terminated with exit code 2. Build might be incomplete.
15:13:27 **** Incremental Build of configuration Debug for project 4_displaymux ****
make all 
Building file: ../funsape/util/debug.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega16 -DF_CPU=1000000UL -MMD -MP -MF"funsape/util/debug.d" -MT"funsape/util/debug.o" -c -o "funsape/util/debug.o" "../funsape/util/debug.cpp"
make: *** [funsape/util/debug.o] Error -1073741502
"make all" terminated with exit code 2. Build might be incomplete.
15:13:32 **** Incremental Build of configuration Debug for project 4_displaymux ****
make all 
Building file: ../funsape/util/debug.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega16 -DF_CPU=1000000UL -MMD -MP -MF"funsape/util/debug.d" -MT"funsape/util/debug.o" -c -o "funsape/util/debug.o" "../funsape/util/debug.cpp"
make: *** [funsape/util/debug.o] Error -1073741502
"make all" terminated with exit code 2. Build might be incomplete.
15:16:08 **** Incremental Build of configuration Debug for project 4_displaymux ****
make all 
Building file: ../funsape/util/debug.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega16 -DF_CPU=1000000UL -MMD -MP -MF"funsape/util/debug.d" -MT"funsape/util/debug.o" -c -o "funsape/util/debug.o" "../funsape/util/debug.cpp"
make: *** [funsape/util/debug.o] Error -1073741502
"make all" terminated with exit code 2. Build might be incomplete.
08:42:43 **** Build of configuration Debug for project 4_displaymux ****
make all 
Building file: ../funsape/util/debug.cpp
Invoking: AVR C++ Compiler
avr-g++ -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -funsigned-char -funsigned-bitfields -fno-exceptions -mmcu=atmega16 -DF_CPU=1000000UL -MMD -MP -MF"funsape/util/debug.d" -MT"funsape/util/debug.o" -c -o "funsape/util/debug.o" "../funsape/util/debug.cpp"
make: *** [funsape/util/debug.o] Error -1073741502
"make all" terminated with exit code 2. Build might be incomplete.
